# halodi-controller-simulation-api

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  eve_ws.repos  eve_ws_https.repos  settings.gradle
csrc/: CMakeLists.txt  demo.cpp
csrc/halodi-controller/: CMakeLists.txt  NativeEffortJointHandleHolder.cpp  NativeEffortJointHandlerHolder.h  NativeIMUHandleHolder.cpp  NativeIMUHandleHolder.h  NativeUpdateableInterface.h  halodicontroller.cpp  halodicontrollerdemo.cpp  halodicontrollerimplementation.cpp  halodicontrollerimplementation.h
csrc/jvmLauncher/: CMakeLists.txt  javavirtualmachine.cpp  javavirtualmachine.h
csrc/ros_controllers/: CMakeLists.txt  IHMCRosControlJavaBridge.cpp  IHMCRosControlJavaBridge.h
halodi-controller-gazebo/: CMakeLists.txt  README.md  package.xml
halodi-controller-gazebo/launch/: halodi-controller-gazebo.launch.py
halodi-controller-gazebo/src/: CMakeLists.txt  halodicontrollerplugin.cpp
halodi-controller-gazebo/worlds/: eve_flat_ground.world
halodi-controller-simulation-api/: CMakeLists.txt  README.md  build.gradle  gitlab-ci.yml  package.xml
halodi-controller-simulation-api/cmake/: FindOrDownloadJDK.cmake
halodi-controller-simulation-api/csrc/: CMakeLists.txt
halodi-controller-simulation-api/csrc/halodi-controller/: CMakeLists.txt  NativeEffortJointHandleHolder.cpp  NativeEffortJointHandlerHolder.h  NativeForceTorqueSensorHandleHolder.cpp  NativeForceTorqueSensorHandleHolder.h  NativeIMUHandleHolder.cpp  NativeIMUHandleHolder.h  halodicontroller.cpp  halodicontroller_c_api.cpp  halodicontroller_c_api.h  halodicontrollerconfigurationloader.cpp  halodicontrollerconfigurationloader.h  halodicontrollerdemo.cpp  halodicontrollerimplementation.cpp  halodicontrollerimplementation.h  sharedbufferimplementation.cpp  sharedbufferimplementation.h
halodi-controller-simulation-api/csrc/jvmLauncher/: CMakeLists.txt  demo.cpp  javavirtualmachine.cpp
halodi-controller-simulation-api/csrc/platform/: CMakeLists.txt  linux.cpp  platform.h  win32.cpp
halodi-controller-simulation-api/include/halodi-controller/: halodicontroller.h
halodi-controller-simulation-api/include/jvmLauncher/: javavirtualmachine.h
halodi-controller-simulation-api/pythonsrc/: CMakeLists.txt  halodicontroller_binding.cpp
halodi-controller-simulation-api/pythonsrc/halodi-controller-api/: halodi_controller_plugin.py
halodi-controller-simulation-api/pythonsrc/halodi_controller_api/: halodi_controller_plugin.py
halodi-controller-simulation-api/src/main/java/com/halodi/controllerAPI/: HalodiControllerElements.java  HalodiControllerJavaBridge.java  NativeHalodiControllerJavaBridge.java
halodi-controller-simulation-api/src/main/java/com/halodi/controllerAPI/demo/: HalodiControllerDemo.java
halodi-controller-simulation-api/src/main/java/com/halodi/controllerAPI/launcher/: TestJVMLaunchCallback.java
halodi-controller-simulation-api/src/main/java/com/halodi/controllerAPI/util/: CallbackPrintStream.java  HalodiControllerPluginConfiguration.java  HalodiControllerPluginConfigurationCreator.java  HalodiControllerPluginConfigurationInstaller.java  HalodiControllerPluginConfigurationList.java
halodi-controller-simulation-api/src/main/java/com/halodi/controllerAPI/wholeRobot/: EffortJointHandle.java  EffortJointHandleImpl.java  ForceTorqueSensorHandle.java  ForceTorqueSensorHandleImpl.java  IHMCWholeRobotControlJavaBridge.java  IMUHandle.java  IMUHandleImpl.java  SharedBuffer.java  SharedBufferImpl.java
include/halodi-controller/: halodicontroller.h
src/main/java/com/halodi/controllerAPI/: HalodiControllerJavaBridge.java
src/main/java/com/halodi/controllerAPI/demo/: RRBotJavaDemo.java  WholeRobotJavaDemo.java
src/main/java/com/halodi/controllerAPI/wholeRobot/: ForceTorqueSensorHandle.java  ForceTorqueSensorHandleImpl.java  IHMCWholeRobotControlJavaBridge.java  IMUHandle.java
src/main/java/us/ihmc/rosControl/: IHMCRosControlJavaBridge.java
src/main/java/us/ihmc/rosControl/demo/: RRBotJavaDemo.java  WholeRobotJavaDemo.java
src/main/java/us/ihmc/rosControl/wholeRobot/: EffortJointHandle.java  EffortJointHandleImpl.java  ForceTorqueSensorHandleImpl.java  IHMCWholeRobotControlJavaBridge.java  IMUHandle.java  IMUHandleImpl.java
